welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: reassignment to val
	if ( a = 10 || b =10 ) {true} else {
               ^makes10:5: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( c = 10 ) {true} else { false}
                       ^