welcome.lessons.welcome.bat.bool1.Makes10.scala.code
def makes10(a:Int, b:Int):Boolean = {
	if ( a = 10 || b =10 ) {true} else {
		var c : Int =0;
		c = a+b;
		if ( c = 10 ) {true} else { false}
	}
}
